// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should synth compose Bitcoin Mainnet 1`] = `
"# Generated by @chainfile/docker:0.0.0, do not edit manually.
# Version: 0.0.0
# Chainfile Name: Bitcoin Mainnet
# Chainfile CAIP-2: bip122:000000000019d6689c085ae165831e93

name: bitcoin_mainnet
services:
  agent:
    container_name: agent-suffix
    image: ghcr.io/vetumorg/chainfile-agent:0.0.0
    ports:
      - '0:1569'
    environment:
      CHAINFILE_JSON: >-
        {"$$schema":"https://chainfile.org/schema.json","caip2":"bip122:000000000019d6689c085ae165831e93","name":"Bitcoin
        Mainnet","values":{"RPC_USER":{"type":"RandomBytes","length":16,"encoding":"hex"},"RPC_PASSWORD":{"type":"RandomBytes","length":16,"encoding":"hex"}},"containers":{"bitcoind":{"image":"docker.io/kylemanna/bitcoind","tag":"latest","source":"https://github.com/kylemanna/docker-bitcoind","endpoints":{"p2p":{"port":8333},"rpc":{"port":8332,"protocol":"HTTP
        JSON-RPC
        2.0","authorization":{"type":"HttpBasic","username":{"$$value":"RPC_USER"},"password":{"$$value":"RPC_PASSWORD"}},"probes":{"readiness":{"method":"getblockchaininfo","params":[],"match":{"result":{"type":"object","properties":{"blocks":{"type":"number"}},"required":["blocks"]}}}}}},"resources":{"cpu":1,"memory":2048},"environment":{"DISABLEWALLET":"1","RPCUSER":{"$$value":"RPC_USER"},"RPCPASSWORD":{"$$value":"RPC_PASSWORD"}},"volumes":{"persistent":{"paths":["/bitcoin/.bitcoin"],"size":{"initial":"600G","from":"2024-01-01","growth":"20G","rate":"monthly"}}}}}}
      CHAINFILE_VALUES: '{}'
    volumes:
      - type: volume
        source: chainfile
        target: /var/chainfile
    networks:
      chainfile: {}
  bitcoind:
    container_name: bitcoind-suffix
    image: docker.io/kylemanna/bitcoind:latest
    environment:
      DISABLEWALLET: '1'
      RPCUSER: \${RPC_USER}
      RPCPASSWORD: \${RPC_PASSWORD}
    ports:
      - '0:8333'
      - '0:8332'
    volumes:
      - type: volume
        source: chainfile
        target: /var/chainfile
      - type: volume
        target: /bitcoin/.bitcoin
    networks:
      chainfile: {}
networks:
  chainfile: {}
volumes:
  chainfile: {}
"
`;

exports[`should synth compose Bitcoin Regtest 1`] = `
"# Generated by @chainfile/docker:0.0.0, do not edit manually.
# Version: 0.0.0
# Chainfile Name: Bitcoin Regtest
# Chainfile CAIP-2: bip122:0f9188f13cb7b2c71f2a335e3a4fc328

name: bitcoin_regtest
services:
  agent:
    container_name: agent-suffix
    image: ghcr.io/vetumorg/chainfile-agent:0.0.0
    ports:
      - '0:1569'
    environment:
      CHAINFILE_JSON: >-
        {"$$schema":"https://chainfile.org/schema.json","caip2":"bip122:0f9188f13cb7b2c71f2a335e3a4fc328","name":"Bitcoin
        Regtest","values":{"RPC_USER":"user","RPC_PASSWORD":"password"},"containers":{"bitcoind":{"image":"docker.io/kylemanna/bitcoind","tag":"latest","source":"https://github.com/kylemanna/docker-bitcoind","command":["btc_oneshot","-fallbackfee=0.00000200","-rpcbind=:8332","-rpcallowip=0.0.0.0/0"],"endpoints":{"p2p":{"port":18445},"rpc":{"port":8332,"protocol":"HTTP
        JSON-RPC
        2.0","authorization":{"type":"HttpBasic","username":{"$$value":"RPC_USER"},"password":{"$$value":"RPC_PASSWORD"}},"probes":{"readiness":{"method":"getblockchaininfo","params":[],"match":{"result":{"type":"object","properties":{"blocks":{"type":"number"}},"required":["blocks"]}}}}}},"resources":{"cpu":0.25,"memory":256},"environment":{"REGTEST":"1","DISABLEWALLET":"0","RPCUSER":{"$$value":"RPC_USER"},"RPCPASSWORD":{"$$value":"RPC_PASSWORD"}},"volumes":{"persistent":{"paths":["/bitcoin/.bitcoin"],"size":"250M"}}}}}
      CHAINFILE_VALUES: '{}'
    volumes:
      - type: volume
        source: chainfile
        target: /var/chainfile
    networks:
      chainfile: {}
  bitcoind:
    container_name: bitcoind-suffix
    image: docker.io/kylemanna/bitcoind:latest
    command:
      - btc_oneshot
      - '-fallbackfee=0.00000200'
      - '-rpcbind=:8332'
      - '-rpcallowip=0.0.0.0/0'
    environment:
      REGTEST: '1'
      DISABLEWALLET: '0'
      RPCUSER: \${RPC_USER}
      RPCPASSWORD: \${RPC_PASSWORD}
    ports:
      - '0:18445'
      - '0:8332'
    volumes:
      - type: volume
        source: chainfile
        target: /var/chainfile
      - type: volume
        target: /bitcoin/.bitcoin
    networks:
      chainfile: {}
networks:
  chainfile: {}
volumes:
  chainfile: {}
"
`;

exports[`should synth compose Ganache 1`] = `
"# Generated by @chainfile/docker:0.0.0, do not edit manually.
# Version: 0.0.0
# Chainfile Name: Ganache
# Chainfile CAIP-2: eip155:1337

name: ganache
services:
  agent:
    container_name: agent-suffix
    image: ghcr.io/vetumorg/chainfile-agent:0.0.0
    ports:
      - '0:1569'
    environment:
      CHAINFILE_JSON: >-
        {"$$schema":"https://chainfile.org/schema.json","caip2":"eip155:1337","name":"Ganache","values":{"RPC_USER":{"type":"RandomBytes","length":16,"encoding":"hex"},"RPC_PASSWORD":{"type":"RandomBytes","length":16,"encoding":"hex"},"URL":"http://$\${RPC_USER}:$\${RPC_PASSWORD}@ganache:8554","GANACHE_VERSION":{"type":"Inject","name":"GANACHE_VERSION","default":"v7.9.2"}},"containers":{"ganache":{"image":"docker.io/trufflesuite/ganache","tag":{"$$value":"GANACHE_VERSION"},"source":"https://github.com/trufflesuite/ganache","environment":{"RPCUSER":{"$$value":"RPC_USER"},"RPCPASSWORD":{"$$value":"RPC_PASSWORD"}},"resources":{"cpu":0.25,"memory":256},"endpoints":{"p2p":{"port":8555},"rpc":{"port":8545,"protocol":"HTTP
        JSON-RPC
        2.0","authorization":{"type":"HttpBasic","username":{"$$value":"RPC_USER"},"password":{"$$value":"RPC_PASSWORD"}},"probes":{"readiness":{"params":[],"method":"eth_blockNumber","match":{"result":{"type":"string"}}}}}},"volumes":{"persistent":{"paths":["/.ganache"],"size":{"initial":"1G","from":"2024-01-01","growth":"1G","rate":"yearly"}}}}}}
      CHAINFILE_VALUES: '{}'
    volumes:
      - type: volume
        source: chainfile
        target: /var/chainfile
    networks:
      chainfile: {}
  ganache:
    container_name: ganache-suffix
    image: docker.io/trufflesuite/ganache:\${GANACHE_VERSION}
    environment:
      RPCUSER: \${RPC_USER}
      RPCPASSWORD: \${RPC_PASSWORD}
    ports:
      - '0:8555'
      - '0:8545'
    volumes:
      - type: volume
        source: chainfile
        target: /var/chainfile
      - type: volume
        target: /.ganache
    networks:
      chainfile: {}
networks:
  chainfile: {}
volumes:
  chainfile: {}
"
`;
